배우 식별과 SougouWiki 검증 흐름 수정
